# madr-fastapi-course

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
madr/: app.py  security.py
madr/database/: models.py
madr/database/migrations/: env.py
madr/database/migrations/versions/: b7a7592c958f_create_users_table.py  f6ede7b1269f_create_authors_and_books_tables.py
madr/routers/: auth.py  authors.py  books.py  users.py
madr/schemas/: author.py  book.py  health_check.py
madr/tests/: conftest.py  factories.py  test_app.py  test_db.py  test_root.py  test_security.py  test_users.py
